<resources>
    <string name="app_name">Registro de buceo</string>
    <string name="place">Lugar</string>
    <string name="dive_location">Localidad</string>
    <string name="spot">Punto de inmersión</string>
    <string name="dive_date">Fecha</string>
    <string name="minutes">Minutos</string>
    <string name="max_depth">Profundidad máxima</string>
    <string name="weather_conditions">Condiciones meteo</string>
    <string name="good">Buenas</string>
    <string name="tolerable">Regulares</string>
    <string name="bad">Malas</string>
    <string name="nitrox_use">Inmersión con nitrox</string>
    <string name="without_nitrox_use">Inmersión con aire</string>
    <string name="remarks">Comentarios</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="new_dive">Nueva inmersión</string>
    <string name="view_dive">Ver inmersión</string>
    <string name="edit_dive">Editar inmersión</string>
    <string name="delete_dive">Borrar inmersión</string>
    <string name="delete_dive_confirmation">¿Borrar inmersión?</string>
    <string name="delete_dive_confirmation_message">¿Está seguro de querer eliminar la inmersión del registro?</string>
    <string name="share_dive">Compartir inmersión</string>
    <string name="not_null">Este campo no puede ser nulo</string>
    <string name="date_not_valid">No es un fecha válida (yyyy-mm-dd)</string>
    <string name="saved">Registro guardado</string>
    <string name="notification_channel_name">DivingLogNotificationChannel</string>
    <string name="notification_channel_description">Canal de notificaciones para la APP Diving Log</string>
    <string name="notification_demo_data_loaded_title">Datos de ejemplo cargados</string>
    <string name="notification_demo_data_loaded_text">Datos de ejemplo cargados en base de datos SQLite. Pulse sobre cada inmersión para ver el detalle</string>
    <string name="notification_data_reset_title">Datos reiniciados</string>
    <string name="notification_data_reset_text">Base de datos vacía</string>
    <string name="weather_service_error">Error en la llamada al API de datos meteo</string>
    <string name="temperature">Temperatura</string>
    <string name="wind_speed">Viento</string>
    <string name="clouds">Nubes</string>
    <string name="internet_permission">No hay permiso para acceder a Internet. No podré obtener las condiciones meteo</string>
    <string name="geo_permission">No hay permiso para obtener la localización. No podré proporcionar la localización de la inmersión por defecto, ni añadir nuevas localizaciones</string>
    <string name="dive_share_message">Me gustaría compartir contigo los datos de esta inmersión</string>
    <string name="form_has_errors">Revise por favor los datos. Faltan datos o son erróneos</string>
    <string name="no_permissions">No se tienen los permisos necesarios para realizar la acción</string>
    <string name="location_already_exists_error">La localización ya está en la lista</string>
    <string name="demo_mode">¿Modo demostración?</string>
    <string name="nitrox_use_by_default">¿Usar nitrox por defecto?</string>
    <string name="config">Configuración</string>
    <string name="config_saved">Configuración guardada</string>
</resources>