<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/view_dive"
        android:icon="@drawable/ic_outline_preview_24"
        android:title="@string/view_dive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/edit_dive"
        android:icon="@drawable/ic_outline_edit_24"
        android:title="@string/edit_dive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete_dive"
        android:icon="@drawable/ic_outline_delete_24"
        android:title="@string/delete_dive"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/share_dive"
        android:icon="@drawable/ic_outline_share_24"
        android:title="@string/share_dive"
        app:showAsAction="ifRoom"/>

</menu>