<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".boundary.ConfigActivity">

    <Button
        android:id="@+id/cancelConfigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/nitroxUseByDefaultCheckBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/saveConfigButton"
        app:layout_constraintTop_toTopOf="@+id/saveConfigButton" />

    <Button
        android:id="@+id/saveConfigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/nitroxUseByDefaultCheckBox"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="@+id/nitroxUseByDefaultCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/nitroxUseByDefaultCheckBox" />

    <CheckBox
        android:id="@+id/demoModeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/demo_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/nitroxUseByDefaultCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nitrox_use_by_default"
        app:layout_constraintEnd_toEndOf="@+id/demoModeCheckBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/demoModeCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/demoModeCheckBox" />
</androidx.constraintlayout.widget.ConstraintLayout>