<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".boundary.DiveDetailActivity">

    <TextView
        android:id="@+id/locationtextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationTextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/locationtextViewLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/locationtextViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/locationtextViewLabel" />

    <TextView
        android:id="@+id/spotTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/spot"
        app:layout_constraintEnd_toEndOf="@+id/locationTextViewContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/locationTextViewContent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextViewContent" />

    <TextView
        android:id="@+id/spotTextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/spot"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/spotTextViewLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spotTextViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/spotTextViewLabel" />

    <TextView
        android:id="@+id/diveDatetextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dive_date"
        app:layout_constraintEnd_toEndOf="@+id/spotTextViewContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spotTextViewContent"
        app:layout_constraintTop_toBottomOf="@+id/spotTextViewContent" />

    <TextView
        android:id="@+id/diveDateTextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dive_date"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/diveDatetextViewLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/diveDatetextViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/diveDatetextViewLabel" />

    <TextView
        android:id="@+id/maxDepthTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/minutes"
        app:layout_constraintEnd_toEndOf="@+id/diveDateTextViewContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/diveDateTextViewContent"
        app:layout_constraintTop_toBottomOf="@+id/diveDateTextViewContent" />

    <TextView
        android:id="@+id/minutesTextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/minutes"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/maxDepthTextViewLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/maxDepthTextViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/maxDepthTextViewLabel" />

    <TextView
        android:id="@+id/minutesTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/max_depth"
        app:layout_constraintEnd_toEndOf="@+id/minutesTextViewContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/minutesTextViewContent"
        app:layout_constraintTop_toBottomOf="@+id/minutesTextViewContent" />

    <TextView
        android:id="@+id/maxDepthTextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/max_depth"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/minutesTextViewLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/minutesTextViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/minutesTextViewLabel" />

    <TextView
        android:id="@+id/remarksTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remarks"
        app:layout_constraintEnd_toEndOf="@+id/maxDepthTextViewContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/maxDepthTextViewContent"
        app:layout_constraintTop_toBottomOf="@+id/maxDepthTextViewContent" />

    <TextView
        android:id="@+id/remarksTextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remarks"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/remarksTextViewLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/remarksTextViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/remarksTextViewLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>